@@ -4,6 +4,10 @@
 //
 //===========================================================================
 
+15th Nov 2019 John Back
+    Added EvtPsi2JpsiPiPi model for psi2S -> J/psi pi+ pi- decays based on 
+    hep-ph/1507.07985, courtesy of Aleksei Luchinsky (LHCb).
+
 21st August 2019 Michal Kreps
     Added the EvtDToKpienu decay model for D -> K pi e nu decays from
     BESIII, courtesy of Liaoyuan Dong.
